<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/white"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/app_name"
        android:textSize="24sp"
        android:textColor="@color/black"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/second_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/teamVSteam"
        android:textSize="24sp"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@+id/title"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/actual_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginStart="50dp"
        android:text="@string/actual_score_title"
        android:textSize="24sp"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@+id/second_title"
        app:layout_constraintLeft_toLeftOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/card1"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        app:cardCornerRadius="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:cardBackgroundColor="@color/white"
        app:cardPreventCornerOverlap="true"
        app:cardUseCompatPadding="true"
        app:layout_constraintTop_toBottomOf="@+id/actual_score">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start|center_vertical"
            android:layout_marginStart="20dp"
            android:text="@string/team_score"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/space_between"
            android:layout_gravity="center|center_vertical"
            android:textSize="24sp"
            android:textStyle="bold"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/team_score"
            android:layout_gravity="end|center_vertical"
            android:layout_marginEnd="20dp"
            android:textSize="20sp"
            android:textStyle="bold"
            />

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/sets"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="50dp"
        android:text="@string/sets"
        android:textSize="24sp"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@+id/card1"
        app:layout_constraintLeft_toLeftOf="parent" />

    <TextView
        android:id="@+id/set1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="50dp"
        android:text="@string/set1"
        android:textSize="24sp"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@+id/sets"
        app:layout_constraintLeft_toLeftOf="parent" />

    <TextView
        android:id="@+id/set2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginStart="50dp"
        android:text="@string/set2"
        android:textSize="24sp"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@+id/set1"
        app:layout_constraintLeft_toLeftOf="parent" />

    <TextView
        android:id="@+id/set3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginStart="50dp"
        android:text="@string/set3"
        android:textSize="24sp"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@+id/set2"
        app:layout_constraintLeft_toLeftOf="parent" />

    <TextView
        android:id="@+id/set4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginStart="50dp"
        android:text="@string/set4"
        android:textSize="24sp"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@+id/set3"
        app:layout_constraintLeft_toLeftOf="parent" />

    <TextView
        android:id="@+id/set5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginStart="50dp"
        android:text="@string/set5"
        android:textSize="24sp"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@+id/set4"
        app:layout_constraintLeft_toLeftOf="parent" />

    <TextView
        android:id="@+id/score1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="50dp"
        android:text="@string/team_score"
        android:textSize="24sp"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@+id/sets"
        app:layout_constraintLeft_toRightOf="@+id/set1" />

    <TextView
        android:id="@+id/score2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="150dp"
        android:text="@string/team_score"
        android:textSize="24sp"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@+id/sets"
        app:layout_constraintLeft_toRightOf="@+id/set1"/>

    <TextView
        android:id="@+id/dash"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="100dp"
        android:text="@string/space_between"
        android:textSize="24sp"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@+id/sets"
        app:layout_constraintLeft_toRightOf="@+id/set1" />

    <Button
        android:id="@+id/mapButton"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:backgroundTint="@color/gray"
        android:text="@string/display_map"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/set5"
        />

    <Button
        android:id="@+id/addPictureButton"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:backgroundTint="@color/gray"
        android:text="@string/add_picture"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mapButton"
        />

</androidx.constraintlayout.widget.ConstraintLayout>